--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
-site_name: Mermaid extension for Python-Markdown
+site_name: Diagram extension for Python-Markdown
 site_author: Hideyuki KATO
 repo_url: https://github.com/hkato/markdown-mermaid-data-uri
-repo_name: hkato/markdown-mermaid-data-uri
+repo_name: hkato/markdown-kroki
 copyright: Copyright © 2025 Hideyuki KATO
 
 theme:
@@ -16,15 +16,11 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
-  - markdown_mermaid_data_uri:
-      mermaid_cli: true
+  - markdown_kroki:
+      # kroki_url: http://localhost:18000
 
 plugins:
   - search
   - to-pdf:
-      cover_subtitle: using Kroki / Mermaid-CLI
+      cover_subtitle: using Kroki
       download_link: header
-
-nav:
-  - Home: index.md
-  - Examples: mermaid.md
