--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install the project
         run: uv sync --all-extras --dev
 
+      - name: Kroki server
+        run: docker compose up -d
+
       - name: Build MkDocs
         run: |
           uv pip install -e .
