--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ dev = [
     "mkdocs-material>=9.6.11",
     "mkdocs-to-pdf>=0.10.0",
     "pymdown-extensions>=10.14.3",
+    "pytest>=8.3.5",
+    "pytest-mock>=3.14.0",
     "types-markdown>=3.8.0.20250415",
     "types-requests>=2.32.0.20250328",
 ]
@@ -50,3 +52,7 @@ dev = [
 line-length = 119
 [tool.ruff.format]
 quote-style = "single"
+
+[tool.pytest.ini_options]
+addopts = "-vv"
+testpaths = ["tests"]
