Fix running pytest from uv

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -15,7 +15,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - name: Unit test
-        run: uv pytest
+        run: uv run pytest
 
       - name: Build the project
         run: uv build
